Refactor UI to JavaFX and add build automation scripts
- Replaced Swing UI with JavaFX (src/com/arabicpoetry/presentation/fx)
- Added new services: LinguisticAnalysis, Frequency, VerseSimilarity
- Added build scripts (scripts/) and installer configuration (installer/)
- Updated database schema and project configuration
- Updated .gitignore to exclude build artifacts